2nd commit today

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
     <!-------------------------------------------------Header-->
     <header>
 
-<div class="row">
-    <div class="col-navbar">    
+<section class="container">
+        <div class="row">
+    <div class="col-navbar">  
         <div class="nav-item">
             <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link active shutter-out-horizontal" aria-current="page" href="#">Active</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link shutter-out-horizontal" href="#">Breakfast</a>
             </li>
@@ -48,18 +46,18 @@
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li>
             </ul>  
-                   <div class="icons">
-            <i class="far fa-user">Login</i>
-            <i class="fas fa-home"></i>
-            <i class="fas fa-utensils"></i>
-            <i class="far fa-comments"></i>
-            <i class="far fa-newspaper"></i>
-        </div>      
-        </div>
+            </div>    
+                    <div class="icons">
+                            <i class="far fa-user">Login</i>
+                            <i class="fas fa-home"></i>
+                            <i class="fas fa-utensils"></i>
+                            <i class="far fa-comments"></i>
+                            <i class="far fa-newspaper"></i> 
+                    </div>   
     </div>
 </div>
 
-
+</section>
 </header>
 <!-------------------------------------------------Header-->
 
