--- a/index.html
+++ b/index.html
@@ -5,66 +5,66 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
 <title>Gluten Free Recipes</title>
 </head>
 <body>
-   <!-------------------------------------------------Title-->   
-    <h2>Gluten Free Recipes</h2>
-  <!-------------------------------------------------Title-->
+    <h1><b>Gluten Free Recipes</b></h1>
 
-    <!-------------------------------------------------Header-->
-    <header>
-
-<section class="container">
-        <div class="row">
-    <div class="col-navbar">  
-        <div class="nav-item">
+    <section class="navbar">
+        <div class="navbar-container">
             <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link shutter-out-horizontal" href="#">Breakfast</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link shutter-out-horizontal" href="#">Lunch</a>
-            </li>
-                <li class="nav-item">
-                <a class="nav-link shutter-out-horizontal" href="#">Mains</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link shutter-out-horizontal" href="#">Baking</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link shutter-out-horizontal" href="#">Treats</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link shutter-out-horizontal" href="#">New Ideas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-            </ul>  
-            </div>    
-                    <div class="icons">
-                            <i class="far fa-user">Login</i>
-                            <i class="fas fa-home"></i>
-                            <i class="fas fa-utensils"></i>
-                            <i class="far fa-comments"></i>
-                            <i class="far fa-newspaper"></i> 
-                    </div>   
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="#">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Breakfast</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Lunch</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Baking</a>
+  </li>
+    <li class="nav-item">
+    <a class="nav-link" href="#">Treats</a>
+  </li>
+</ul>       
+<div class="row-icons">
+                <a href="#"><i class="fas fa-home"></i></a>
+                <a href="#"><i class="fas fa-utensils"></i></a>
+                <a href="#"><i class="fas fa-comments"></i></a>
+                <a href="#"><i class="fas fa-newspaper"></i></a>
+
+        </div>
+<div class="flex-space"></div>
+        </div>
+ 
+    </section>
+
+    <div class="main-image"></div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<footer>
+<div class="container-contact">
+    <ul>
+        <li><a href="#"></a>Contact</li>
+        <li><a href="#"></a>Privacy</li>
+        <li><a href="#"></a>Site Map</li>
+        <li><a href="#"></a>Testimonials</li>
+    </ul>    
+    <div class="foot-icons">
+    <a><i class="fab fa-facebook-square"></i></a>
+    <a><i class="fab fa-twitter-square"></i></a>
+    <a><i class="fab fa-youtube"></i></a>
+    <a><i class="fab fa-instagram-square"></i></a>
     </div>
 </div>
 
-</section>
-</header>
-<!-------------------------------------------------Header-->
-
-<div class="hero-image">
-<div class="opaque-overlay">&nbsp;</div>
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</footer>
 </body>
 </html>
